@@ -10,6 +10,18 @@
 - [RTMPDUMP] Doesn't support handshake type 10 which is required by youtube.
 - Youtube implemented encryption of signatures, without knowing the proper decryption method this VEVO content will remain unstable
 
+[B]Version 4.4.8[/B]
+- Fixed login issues for all five login methods.
+- Refactored VEVO video playback code.
+
+[B]Version 4.4.7[/B]
+This version contains the sources by sogopot (http://forum.xbmc.org/showthread.php?tid=79487&page=271) and jded (http://forum.xbmc.org/showthread.php?tid=79487&page=276), than both :). I (Skipmode A1) pushed it to the officials XMBC repo so it will install for everybody.
+- Fixed: To solve the login problems, I added the fix from this post: Reply #52 (http://code.google.com/p/youtubexbmc/issues/detail?id=115#c52). If you continue to have login problems, you may have to find a different fix.
+- Fixed: To fix a problem with VEVO videos not playing, as well as certain videos added to favorites not playing, I added the YouTubePlayer.py from this post: Reply #217 (http://code.google.com/p/youtubexbmc/issues/detail?id=95#c217).
+- Fixed: To fix a problem with LIVE streams not playing, I compared an addon sent to from member RedPenguin, and found a duplicated entry at line 362 & 363 and replaced with the necessary code in YouTubePlayer.py.
+- Fixed: Fix Login Problem with non English languages.
+- Fixed: When you are in a non English speaking country, youtube returns the pages by default in your language. The plugin sometimes gave an error in this situation.
+
 [B]Version 3.4.6[/B]
 - Fixed: Age verification working again due
 - Added: Partial hack to support youtubes new encrypted signatures, this will break again.
